--- a/Code/src/InGame.fxml
+++ b/Code/src/InGame.fxml
@@ -90,17 +90,17 @@
             <Image url="@imageVide.PNG" />
          </image>
       </ImageView>
-      <ImageView fx:id="Piece1" fitHeight="220.0" fitWidth="330.0" layoutX="640.0" layoutY="64.0" onMouseDragged="#activerDeplacementPiece1" onScroll="#rotationPiece1" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="Piece1" fitHeight="220.0" fitWidth="330.0" layoutX="640.0" layoutY="64.0" onMouseDragged="#activerDeplacementPiece1" onMouseReleased="#PieceDragueFini1" onScroll="#rotationPiece1" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@imagePieceBrique.PNG" />
          </image>
       </ImageView>
-      <ImageView fx:id="Piece3" fitHeight="110.0" fitWidth="330.0" layoutX="640.0" layoutY="541.0" onMouseDragged="#activerDeplacementPiece3" onScroll="#rotationPiece3" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="Piece3" fitHeight="110.0" fitWidth="330.0" layoutX="640.0" layoutY="541.0" onMouseDragged="#activerDeplacementPiece3" onMouseReleased="#PieceDragueFini3" onScroll="#rotationPiece3" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@imagePieceBois.PNG" />
          </image>
       </ImageView>
-      <ImageView fx:id="Piece2" fitHeight="220.0" fitWidth="220.0" layoutX="640.0" layoutY="305.0" onMouseDragged="#activerDeplacementPiece2" onScroll="#rotationPiece2" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="Piece2" fitHeight="220.0" fitWidth="220.0" layoutX="640.0" layoutY="305.0" onMouseDragged="#activerDeplacementPiece2" onMouseReleased="#PieceDragueFini2" onScroll="#rotationPiece2" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@imagePiecePaille.PNG" />
          </image>
