--- a/Code/src/visual/AccueilFXML.fxml
+++ b/Code/src/visual/AccueilFXML.fxml
@@ -3,26 +3,41 @@
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ControllerAccueil">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="visual.ControllerAccueil">
    <children>
       <ImageView fitHeight="720.0" fitWidth="1280.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../ressources/pageaccueil.png" />
+            <Image url="@../../ressources/pageaccueil.png" />
          </image>
       </ImageView>
       <Button layoutY="640.0" mnemonicParsing="false" onAction="#cliquerOptions" prefHeight="80.0" prefWidth="80.0" text="Options" />
       <Button layoutX="1200.0" layoutY="640.0" mnemonicParsing="false" onAction="#cliquerClassement" prefHeight="80.0" prefWidth="80.0" text="Classement" />
       <Button layoutX="536.0" layoutY="238.0" mnemonicParsing="false" onAction="#CliquerEntraînement" prefHeight="70.0" prefWidth="300.0" text="Entraînement" />
       <Button layoutX="536.0" layoutY="348.0" mnemonicParsing="false" onAction="#CliquerProgression" prefHeight="70.0" prefWidth="300.0" text="Progression" />
-      <Button layoutX="536.0" layoutY="458.0" mnemonicParsing="false" onAction="#cliquerCompétition" prefHeight="70.0" prefWidth="300.0" text="Compétition" />
-      <Canvas fx:id="Canvas" height="377.0" layoutY="250.0" width="299.0" />
-      <Slider fx:id="sliderMusique" layoutX="90.0" layoutY="340.0" max="1.0" />
-      <Slider fx:id="sliderEffets" layoutX="90.0" layoutY="440.0" max="1.0" />
-      <CheckBox fx:id="checkBoxPleinEcran" layoutX="117.0" layoutY="536.0" mnemonicParsing="false" onAction="#cliquerPleinEcran" text="CheckBox" />
+      <Button layoutX="536.0" layoutY="458.0" mnemonicParsing="false" onAction="#cliquerCompetition" prefHeight="70.0" prefWidth="300.0" text="Compétition" />
+      <Canvas fx:id="canvas" height="377.0" layoutY="250.0" width="299.0" />
+      <Slider fx:id="sliderMusique" layoutX="90.0" layoutY="343.0" majorTickUnit="0.25" max="1.0" minorTickCount="0" onMouseReleased="#changerVolumeMusique" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="0.5" visible="false" />
+      <Slider fx:id="sliderEffets" layoutX="90.0" layoutY="463.0" majorTickUnit="0.25" max="1.0" minorTickCount="0" onMouseReleased="#changerVolumeEffets" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="0.5" visible="false" />
+      <CheckBox fx:id="checkBoxPleinEcran" alignment="CENTER" layoutX="81.0" layoutY="539.0" mnemonicParsing="false" onAction="#cliquerPleinEcran" text="Plein Ecran" visible="false">
+         <font>
+            <Font size="22.0" />
+         </font></CheckBox>
+      <Label fx:id="labelMusique" alignment="CENTER" layoutX="104.0" layoutY="291.0" text="Musique" visible="false">
+         <font>
+            <Font size="28.0" />
+         </font>
+      </Label>
+      <Label fx:id="labelEffets" alignment="CENTER" layoutX="124.0" layoutY="410.0" text="Effets" visible="false">
+         <font>
+            <Font size="28.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
