--- a/Code/src/visual/CompetitionFXML.fxml
+++ b/Code/src/visual/CompetitionFXML.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -12,14 +13,41 @@
             <Image url="@../../ressources/Mode%20compétition.png" />
          </image>
       </ImageView>
-      <Button layoutY="652.0" mnemonicParsing="false" onAction="#cliquerRetour" prefHeight="68.0" prefWidth="147.0" text="Retour" />
-      <Button layoutX="211.0" layoutY="236.0" mnemonicParsing="false" onAction="#cliquerDS" prefHeight="75.0" prefWidth="370.0" text="D/S" />
-      <Button layoutX="211.0" layoutY="436.0" mnemonicParsing="false" onAction="#cliquerDE" prefHeight="75.0" prefWidth="369.0" text="D/E" />
-      <Button layoutX="211.0" layoutY="336.0" mnemonicParsing="false" onAction="#cliquerDJ" prefHeight="75.0" prefWidth="369.0" text="D/J" />
-      <Button layoutX="211.0" layoutY="536.0" mnemonicParsing="false" onAction="#cliquerDM" prefHeight="75.0" prefWidth="369.0" text="D/M" />
-      <Button layoutX="809.0" layoutY="236.0" mnemonicParsing="false" onAction="#cliquerNS" prefHeight="75.0" prefWidth="370.0" text="N/S" />
-      <Button layoutX="809.0" layoutY="436.0" mnemonicParsing="false" onAction="#cliquerNE" prefHeight="75.0" prefWidth="369.0" text="N/E" />
-      <Button layoutX="809.0" layoutY="336.0" mnemonicParsing="false" onAction="#cliquerNJ" prefHeight="75.0" prefWidth="369.0" text="N/J" />
-      <Button layoutX="809.0" layoutY="536.0" mnemonicParsing="false" onAction="#cliquerNM" prefHeight="75.0" prefWidth="369.0" text="N/M" />
+      <Button layoutY="652.0" mnemonicParsing="false" onAction="#cliquerRetour" prefHeight="68.0" prefWidth="147.0" text="Retour">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Button layoutX="211.0" layoutY="236.0" mnemonicParsing="false" onAction="#cliquerDS" prefHeight="75.0" prefWidth="370.0" text="D/S">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Button layoutX="211.0" layoutY="436.0" mnemonicParsing="false" onAction="#cliquerDE" prefHeight="75.0" prefWidth="369.0" text="D/E">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Button layoutX="211.0" layoutY="336.0" mnemonicParsing="false" onAction="#cliquerDJ" prefHeight="75.0" prefWidth="369.0" text="D/J">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Button layoutX="211.0" layoutY="536.0" mnemonicParsing="false" onAction="#cliquerDM" prefHeight="75.0" prefWidth="369.0" text="D/M">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Button layoutX="809.0" layoutY="236.0" mnemonicParsing="false" onAction="#cliquerNS" prefHeight="75.0" prefWidth="370.0" text="N/S">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Button layoutX="809.0" layoutY="436.0" mnemonicParsing="false" onAction="#cliquerNE" prefHeight="75.0" prefWidth="369.0" text="N/E">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Button layoutX="809.0" layoutY="336.0" mnemonicParsing="false" onAction="#cliquerNJ" prefHeight="75.0" prefWidth="369.0" text="N/J">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Button layoutX="809.0" layoutY="536.0" mnemonicParsing="false" onAction="#cliquerNM" prefHeight="75.0" prefWidth="369.0" text="N/M">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
    </children>
 </AnchorPane>
