--- a/Code/src/visual/InGame.fxml
+++ b/Code/src/visual/InGame.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="root" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ControllerInGame">
+<AnchorPane fx:id="root" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="visual.ControllerInGame">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#9ba2a8" height="720.0" layoutX="1015.0" stroke="BLACK" strokeType="INSIDE" width="265.0" />
       <Button fx:id="boutonSolution" layoutX="1022.0" layoutY="633.0" mnemonicParsing="false" onAction="#donnerSolution" prefHeight="35.0" prefWidth="244.0" text="Solution" />
@@ -25,71 +25,94 @@
       </Text>
       <Button fx:id="boutonAbandonner" layoutX="1022.0" layoutY="572.0" mnemonicParsing="false" onAction="#abandonner" prefHeight="35.0" prefWidth="244.0" text="Abandonner" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#6ae3f8" height="720.0" stroke="BLACK" strokeType="INSIDE" width="1017.0" />
-      <ImageView fx:id="imagePlateau13" fitHeight="110.0" fitWidth="110.0" layoutX="399.0" layoutY="470.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imagePlateau13" fitHeight="110.0" fitWidth="110.0" layoutX="450.0" layoutY="470.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@imageVide.PNG" />
+            <Image url="@imagesDuJeu/imageVide.PNG" />
          </image>
       </ImageView>
-      <ImageView fx:id="imagePlateau8" fitHeight="110.0" fitWidth="110.0" layoutX="179.0" layoutY="360.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imagePlateau8" fitHeight="110.0" fitWidth="110.0" layoutX="230.0" layoutY="360.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@imageVide.PNG" />
+            <Image url="@imagesDuJeu/imageVide.PNG" />
          </image>
       </ImageView>
-      <ImageView fx:id="imagePlateau7" fitHeight="110.0" fitWidth="110.0" layoutX="69.0" layoutY="360.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imagePlateau7" fitHeight="110.0" fitWidth="110.0" layoutX="120.0" layoutY="360.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@imageVide.PNG" />
+            <Image url="@imagesDuJeu/imageVide.PNG" />
          </image>
       </ImageView>
-      <ImageView fx:id="imagePlateau12" fitHeight="110.0" fitWidth="110.0" layoutX="289.0" layoutY="470.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imagePlateau12" fitHeight="110.0" fitWidth="110.0" layoutX="340.0" layoutY="470.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@imageVide.PNG" />
+            <Image url="@imagesDuJeu/imageVide.PNG" />
          </image>
       </ImageView>
-      <ImageView fx:id="imagePlateau10" fitHeight="110.0" fitWidth="110.0" layoutX="399.0" layoutY="360.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imagePlateau10" fitHeight="110.0" fitWidth="110.0" layoutX="450.0" layoutY="360.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@imageVide.PNG" />
+            <Image url="@imagesDuJeu/imageVide.PNG" />
          </image>
       </ImageView>
-      <ImageView fx:id="imagePlateau6" fitHeight="110.0" fitWidth="110.0" layoutX="399.0" layoutY="250.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imagePlateau6" fitHeight="110.0" fitWidth="110.0" layoutX="450.0" layoutY="250.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@imageVide.PNG" />
+            <Image url="@imagesDuJeu/imageVide.PNG" />
          </image>
       </ImageView>
-      <ImageView fx:id="imagePlateau11" fitHeight="110.0" fitWidth="110.0" layoutX="179.0" layoutY="470.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imagePlateau11" fitHeight="110.0" fitWidth="110.0" layoutX="230.0" layoutY="470.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@imageVide.PNG" />
+            <Image url="@imagesDuJeu/imageVide.PNG" />
          </image>
       </ImageView>
-      <ImageView fx:id="imagePlateau5" fitHeight="110.0" fitWidth="110.0" layoutX="289.0" layoutY="250.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imagePlateau5" fitHeight="110.0" fitWidth="110.0" layoutX="340.0" layoutY="250.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@imageVide.PNG" />
+            <Image url="@imagesDuJeu/imageVide.PNG" />
          </image>
       </ImageView>
-      <ImageView fx:id="imagePlateau9" fitHeight="110.0" fitWidth="110.0" layoutX="289.0" layoutY="360.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imagePlateau9" fitHeight="110.0" fitWidth="110.0" layoutX="340.0" layoutY="360.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@imageVide.PNG" />
+            <Image url="@imagesDuJeu/imageVide.PNG" />
          </image>
       </ImageView>
-      <ImageView fx:id="imagePlateau3" fitHeight="110.0" fitWidth="110.0" layoutX="69.0" layoutY="250.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imagePlateau3" fitHeight="110.0" fitWidth="110.0" layoutX="120.0" layoutY="250.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@imageVide.PNG" />
+            <Image url="@imagesDuJeu/imageVide.PNG" />
          </image>
       </ImageView>
-      <ImageView fx:id="imagePlateau4" fitHeight="110.0" fitWidth="110.0" layoutX="179.0" layoutY="250.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imagePlateau4" fitHeight="110.0" fitWidth="110.0" layoutX="230.0" layoutY="250.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@imageVide.PNG" />
+            <Image url="@imagesDuJeu/imageVide.PNG" />
          </image>
       </ImageView>
-      <ImageView fx:id="imagePlateau1" fitHeight="110.0" fitWidth="110.0" layoutX="179.0" layoutY="140.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imagePlateau1" fitHeight="110.0" fitWidth="110.0" layoutX="230.0" layoutY="140.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@imageVide.PNG" />
+            <Image url="@imagesDuJeu/imageVide.PNG" />
          </image>
       </ImageView>
-      <ImageView fx:id="imagePlateau2" fitHeight="110.0" fitWidth="110.0" layoutX="289.0" layoutY="140.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imagePlateau2" fitHeight="110.0" fitWidth="110.0" layoutX="340.0" layoutY="140.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@imageVide.PNG" />
+            <Image url="@imagesDuJeu/imageVide.PNG" />
          </image>
       </ImageView>
+      <ImageView fx:id="imageBordPlateau16" fitHeight="110.0" fitWidth="110.0" layoutX="120.0" layoutY="470.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imageBordPlateau9" fitHeight="110.0" fitWidth="110.0" layoutX="450.0" layoutY="140.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imageBordPlateau8" fitHeight="110.0" fitWidth="110.0" layoutX="120.0" layoutY="140.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imageBordPlateau22" fitHeight="110.0" fitWidth="110.0" layoutX="450.0" layoutY="580.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imageBordPlateau21" fitHeight="110.0" fitWidth="110.0" layoutX="356.0" layoutY="580.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imageBordPlateau20" fitHeight="110.0" fitWidth="110.0" layoutX="246.0" layoutY="580.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imageBordPlateau19" fitHeight="110.0" fitWidth="110.0" layoutX="136.0" layoutY="580.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imageBordPlateau17" fitHeight="110.0" fitWidth="110.0" layoutX="560.0" layoutY="470.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imageBordPlateau14" fitHeight="110.0" fitWidth="110.0" layoutX="560.0" layoutY="360.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imageBordPlateau12" fitHeight="110.0" fitWidth="110.0" layoutX="560.0" layoutY="250.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imageBordPlateau10" fitHeight="110.0" fitWidth="110.0" layoutX="560.0" layoutY="140.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imageBordPlateau23" fitHeight="110.0" fitWidth="110.0" layoutX="560.0" layoutY="580.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imageBordPlateau6" fitHeight="110.0" fitWidth="110.0" layoutX="560.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imageBordPlateau5" fitHeight="110.0" fitWidth="110.0" layoutX="450.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imageBordPlateau4" fitHeight="110.0" fitWidth="110.0" layoutX="340.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imageBordPlateau3" fitHeight="110.0" fitWidth="110.0" layoutX="230.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imageBordPlateau2" fitHeight="110.0" fitWidth="110.0" layoutX="120.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imageBordPlateau7" fitHeight="110.0" fitWidth="110.0" layoutX="10.0" layoutY="140.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imageBordPlateau1" fitHeight="110.0" fitWidth="110.0" layoutX="10.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imageBordPlateau11" fitHeight="110.0" fitWidth="110.0" layoutX="10.0" layoutY="250.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imageBordPlateau13" fitHeight="110.0" fitWidth="110.0" layoutX="10.0" layoutY="360.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imageBordPlateau15" fitHeight="110.0" fitWidth="110.0" layoutX="10.0" layoutY="470.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imageBordPlateau18" fitHeight="110.0" fitWidth="110.0" layoutX="26.0" layoutY="580.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="Piece1" fitHeight="330.0" fitWidth="330.0" layoutX="671.0" layoutY="14.0" onMouseDragged="#activerDeplacementPiece1" onMouseReleased="#PieceDragueFini1" onScroll="#rotationPiece1" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@imagePieceBriqueHaut.PNG" />
