--- a/Code/src/visual/ClassementFXML.fxml
+++ b/Code/src/visual/ClassementFXML.fxml
@@ -12,7 +12,7 @@
    <children>
       <ImageView fitHeight="720.0" fitWidth="1280.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../ressources/Tableau%20des%20scores.png" />
+            <Image url="@../../ressources/TableauDesScores.png" />
          </image>
       </ImageView>
       <Label fx:id="categorie" alignment="CENTER" layoutX="411.0" layoutY="178.0" prefHeight="73.0" prefWidth="513.0" textFill="WHITE">
