--- a/Code/src/visual/EntrainementFXML.fxml
+++ b/Code/src/visual/EntrainementFXML.fxml
@@ -10,7 +10,7 @@
    <children>
       <ImageView fitHeight="720.0" fitWidth="1280.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../ressources/Mode%20entrainement.png" />
+            <Image url="@../../ressources/ModeEntrainement.png" />
          </image>
       </ImageView>
       <Button layoutY="652.0" mnemonicParsing="false" onAction="#cliquerRetour" prefHeight="68.0" prefWidth="147.0" text="Retour">
