--- a/Code/src/visual/EntrerScoreCompetitionFXML.fxml
+++ b/Code/src/visual/EntrerScoreCompetitionFXML.fxml
@@ -13,7 +13,7 @@
    <children>
       <ImageView fitHeight="720.0" fitWidth="1820.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../ressources/Mode%20compétition%20terminé.png" />
+            <Image url="@../../ressources/ModeCompetitionTermine.png" />
          </image>
       </ImageView>
       <TextField fx:id="textFieldNom" layoutX="567.0" layoutY="455.0" prefHeight="35.0" prefWidth="204.0" />
