--- a/Code/src/visual/ProgressionFXML.fxml
+++ b/Code/src/visual/ProgressionFXML.fxml
@@ -10,7 +10,7 @@
    <children>
       <ImageView fitHeight="720.0" fitWidth="1820.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../ressources/Mode%20progression.png" />
+            <Image url="@../../ressources/ModeProgression.png" />
          </image>
       </ImageView>
       <Button fx:id="d1" layoutX="226.0" layoutY="247.0" mnemonicParsing="false" onAction="#cliquer1D" prefHeight="50.0" prefWidth="50.0" text="1D">
