--- a/Code/src/visual/InGame.fxml
+++ b/Code/src/visual/InGame.fxml
@@ -12,6 +12,7 @@
 <AnchorPane fx:id="root" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="visual.ControllerInGame">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#9ba2a8" height="720.0" layoutX="1015.0" stroke="BLACK" strokeType="INSIDE" width="265.0" />
+      <ImageView fx:id="imageFond" fitHeight="720.0" fitWidth="1280.0" pickOnBounds="true" preserveRatio="true" />
       <Button fx:id="boutonSolution" layoutX="1022.0" layoutY="633.0" mnemonicParsing="false" onAction="#donnerSolution" prefHeight="35.0" prefWidth="244.0" text="Solution" />
       <Text layoutX="1062.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Temps :">
          <font>
